--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,9 @@
           "options": {
             "outputPath": "dist/moment-replacement"
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
